@@ -106,6 +106,8 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
 * Add most of Steve Grubb's resource leak and other fixes (from
   Linux distributors - kukuk)
 * doc/Makefile: Don't include .cvsignore files in tar ball (kukuk)
+* libpam_misc/misc_conv.c: Differentiate between Ctrl-D and
+  <Return> (Bug 1032604 - kukuk)
 
 0.77: Mon Sep 23 10:25:42 PDT 2002
 
